feat: add confirm for customer
